# Ardor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  IApplication.cpp  IApplication.h
example/Null/: CMakeLists.txt  Null.cpp
example/Triangle/: CMakeLists.txt
source/: CMakeLists.txt  Engine.h  EngineImp.cpp  EngineImp.h
source/Graphics/OGL/: OGLShader.cpp
source/Platform/Windows/: WinWindows.cpp  WinWindows.h
source/Render/: RenderWindow.cpp  RenderWindow.h
source/RenderAPI/API/: IndexBuffer.h  RenderContext.h  Shader.h  Texture.h  VertexBuffer.h
source/RenderAPI/OGL/: OGLShader.h
source/Util/Log/: Log.cpp  Log.h
